# relayer

./: .env  .env.example  .gitignore  .gitmodules  .licenserc.yaml  Cargo.toml  Dockerfile  ERRORS.md  README.md  README2.md  config.toml  crates.js  flake.nix  help.html  index.html  install.ps1  install.sh  jest.config.js  package.json  rust-toolchain  rust-toolchain.toml  rustfmt.toml  sample_seed.txt  search-index.js  settings.html  source-files.js
beacon-chain-relay/: Cargo.toml
beacon-chain-relay/src/: beacon_block_body_merkle_tree.rs  beacon_rpc_client.rs  config_for_tests.rs  execution_block_proof.rs  lib.rs  test_utils.rs  utils.rs
crates/beacon-chain-relay/: Cargo.toml  config_for_tests.toml
crates/beacon-chain-relay/src/: beacon_block_body_merkle_tree.rs  beacon_rpc_client.rs  execution_block_proof.rs  test_utils.rs
crates/bridge-registry-backends/: Cargo.toml
crates/bridge-registry-backends/src/: dkg.rs  lib.rs  mocked.rs
crates/bridge-registry-backends/tests/: submit_anchor_update_proposal.rs
crates/chains-info/: Cargo.toml  build.rs  supported_chains.toml
crates/chains-info/fixtures/: chains.json  coingecko_coins_list.json
crates/chains-info/src/: lib.rs
crates/event-watcher-traits/: Cargo.toml  README.md
crates/event-watcher-traits/src/: lib.rs  tests.rs
crates/event-watcher-traits/src/evm/: bridge_watcher.rs  event_watcher.rs  mod.rs
crates/event-watcher-traits/src/substrate/: bridge_watcher.rs  event_watcher.rs  mod.rs
crates/price-oracle-backends/: Cargo.toml
crates/price-oracle-backends/src/: cached.rs  coingecko.rs  dummy.rs  lib.rs  merger.rs
crates/proof-generation/: Cargo.toml
crates/proof-generation/src/: batch_prover.rs  lib.rs  proof_delegation.rs  types.rs
crates/proof-generation/test_data/: proofInputs.json
crates/proposal-signing-backends/: Cargo.toml
crates/proposal-signing-backends/src/: dkg.rs  lib.rs  mocked.rs  proposal_handler.rs  queue.rs  tangle.rs
crates/proposal-signing-backends/src/queue/: mem.rs  mod.rs
crates/proposal-signing-backends/tests/: submit_anchor_update_proposal.rs
crates/relayer-config/: Cargo.toml
crates/relayer-config/src/: anchor.rs  block_poller.rs  cli.rs  defaults.rs  event_watcher.rs  lib.rs  signing_backend.rs  utils.rs
crates/relayer-config/src/cosmwasm/: mod.rs
crates/relayer-config/src/evm/: mod.rs
crates/relayer-config/src/substrate/: mod.rs
crates/relayer-context/: Cargo.toml
crates/relayer-context/src/: ethers_retry_policy.rs  lib.rs
crates/relayer-handler-utils/: Cargo.toml
crates/relayer-handler-utils/src/: lib.rs
crates/relayer-handlers/: Cargo.toml  build.rs
crates/relayer-handlers/src/: README.md  lib.rs
crates/relayer-handlers/src/routes/: encrypted_leaves.rs  encrypted_outputs.rs  fee_info.rs  fees.rs  info.rs  leaves.rs  masp_tx_relaying.rs  metric.rs  mod.rs  private_tx_withdraw.rs  transaction_status.rs
crates/relayer-store/: Cargo.toml
crates/relayer-store/src/: lib.rs  mem.rs  queue.rs  sled.rs
crates/relayer-types/: Cargo.toml
crates/relayer-types/src/: cw_chain_id.rs  dynamic_payload.rs  etherscan_api.rs  lib.rs  mnemonic.rs  private_key.rs  rpc_client.rs  rpc_url.rs  suri.rs
crates/relayer-utils/: Cargo.toml
crates/relayer-utils/src/: clickable_link.rs  fees.rs  lib.rs  metric.rs  multi_provider.rs  probe.rs  retry.rs  static_tx_payload.rs
crates/tx-queue/: Cargo.toml
crates/tx-queue/src/: lib.rs
crates/tx-queue/src/evm/: evm_tx_queue.rs  mod.rs
crates/tx-queue/src/substrate/: mod.rs  substrate_tx_queue.rs
crates/tx-relay/: Cargo.toml
crates/tx-relay-utils/: Cargo.toml
crates/tx-relay-utils/src/: lib.rs
crates/tx-relay/assets/: FungibleTokenWrapperContract.json
crates/tx-relay/src/: lib.rs
crates/tx-relay/src/evm/: fees.rs  masp.rs  masp_vanchor.rs  mod.rs  vanchor.rs
crates/tx-relay/src/substrate/: fees.rs  mixer.rs  mod.rs  vanchor.rs
crates/tx-relay/tests/: vanchor_private_transaction.rs
event-watchers/dkg/: Cargo.toml
event-watchers/dkg/src/: governor_watcher.rs  job_result_handler.rs  lib.rs  proposal_handler_watcher.rs  proposal_removed_watcher.rs  proposal_signed_handler.rs  public_key_changed_handler.rs
event-watchers/dkg/src/dkg_metadata/: mod.rs  public_key_changed_handler.rs
event-watchers/evm/: Cargo.toml
event-watchers/evm/src/: lib.rs  signature_bridge_watcher.rs  tests.rs  vanchor_deposit_handler.rs  vanchor_encrypted_outputs_handler.rs
event-watchers/evm/src/masp/: masp_generate_batch_deposit_proof.rs  masp_leaves_handler.rs  masp_proxy_handler.rs  mod.rs
event-watchers/evm/src/open_vanchor/: mod.rs  open_vanchor_deposit_handler.rs  open_vanchor_leaves_handler.rs
event-watchers/evm/src/vanchor/: mod.rs  vanchor_deposit_handler.rs  vanchor_encrypted_outputs_handler.rs  vanchor_leaves_handler.rs
event-watchers/substrate/: Cargo.toml
event-watchers/substrate/src/: lib.rs  signature_bridge_watcher.rs  vanchor_deposit_handler.rs  vanchor_encrypted_output_handler.rs  vanchor_encrypted_output_watcher.rs  vanchor_leaves_handler.rs  vanchor_leaves_watcher.rs  vanchor_watcher.rs
event-watchers/tangle/: Cargo.toml
event-watchers/tangle/src/: job_result_handler.rs  lib.rs
relayer/: Cargo.toml
relayer-tests/: Cargo.toml
relayer-tests/chain/hermes/chain-state/: state.json
relayer-tests/chain/relayer-configs/: .env.example  hermes.json  main.toml
relayer-tests/src/: api_test.rs  lib.rs  tx_relaying.rs  utils.rs
relayer-tests/tests/: tx_relaying.rs
relayer/src/: handler.rs  main.rs  test.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/pallet/: merkle.rs  mixer.rs  mod.rs
services/block-poller/: Cargo.toml
services/block-poller/src/: block_poller.rs  lib.rs  main.rs
services/light-client-relayer/: Cargo.toml  config.toml  config_for_tests.toml  config_relayer.toml
services/light-client-relayer/src/: lib.rs  light_client.rs  main.rs  substrate_client.rs
services/light-client-relayer/tests/: test_client.rs
services/webb-relayer/: Cargo.toml
services/webb-relayer/src/: lib.rs  main.rs  service.rs
services/webb-relayer/tests/: anvil.rs
(+992 files in other folders)
