[workspace]
members = [
    ".",
    "crates/*",
    "services/*",
]

[package]
name = "webb-relayer"
version = "0.4.1"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2021"
description = "The Webb Relayer toolkit"
license = "Apache-2.0"
documentation = "https://docs.rs/webb-relayer"
homepage = "https://webb.tools"
repository = "https://github.com/webb-tools/relayer"
exclude = ["tests", "config", ".github", "ci", "assets", "docker"]

[lib]
doctest = false

[[bin]]
name = "webb-relayer"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "in-depth"
path = "examples/in_depth.rs"
required-features = ["cli"]

[dependencies]
webb-relayer-types = { path = "./crates/relayer-types" }
webb-relayer-store = { path = "./crates/relayer-store" }
webb-relayer-config = { path = "./crates/relayer-config"}
webb-relayer-utils = { path = "./crates/relayer-utils"}
anyhow = { version = "^1", optional = true }
async-trait = "^0.1"
tracing = { version = "^0.1", features = ["log"] }
tracing-test = "0.2"
url = { version = "^2.2", features = ["serde"] }
sled = { version = "^0.34" }
futures = { version = "^0.3", default-features = false }
backoff = { version = "0.4.0", features = ["tokio"] }
serde = { version = "^1", default-features = false, features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1" }
warp = { version = "0.3.3", default-features = false, features = ["websocket", "tls"] }
warp-real-ip = "0.2"
config = { version = "0.11", default-features = false, features = ["toml", "json"] }
serde_json = { version = "^1", default-features = false }
paw = { version = "^1.0", optional = true }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
hex = { version = "0.4", default-features = false }
webb = { version = "0.5.7", default-features = false }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.13.1"
dotenv = "0.15.0"
derive_more = { version = "0.99", default-features = false, features = ["display"] }
typed-builder = "0.10.0"
libsecp256k1 = "0.7.0"

[dev-dependencies]
tempfile = "^3.2"
colored = "2"

[features]
default = ["evm-runtime", "substrate-runtime"]
cli = [ 
    "evm-runtime",
    "substrate-runtime",
    "anyhow",
    "paw",
    "webb-relayer-config/cli"
]
evm-runtime = ["webb/evm-runtime", "webb-proposals/evm"]
substrate-runtime = ["webb/substrate-runtime", "webb-proposals/substrate"]
integration-tests = ["webb-relayer-config/integration-tests"]
