[workspace.package]
version = "0.5.0-dev"
authors = ["Webb Developers <drew@webb.tools>"]
license = "Apache-2.0"
documentation = "https://docs.rs/webb-relayer"
homepage = "https://webb.tools"
repository = "https://github.com/webb-tools/relayer"
edition = "2021"

[workspace]
members = [".", "crates/*", "event-watchers/*", "services/webb-relayer"]

[workspace.dependencies]
webb-price-oracle-backends = { path = "crates/price-oracle-backends" }
webb-bridge-registry-backends = { path = "crates/bridge-registry-backends" }
webb-proposal-signing-backends = { path = "crates/proposal-signing-backends" }
webb-relayer-tx-queue = { path = "crates/tx-queue" }
webb-relayer-handlers = { path = "crates/relayer-handlers" }
webb-relayer-store = { path = "crates/relayer-store" }
webb-relayer-config = { path = "crates/relayer-config" }
webb-relayer-context = { path = "crates/relayer-context" }
webb-relayer-utils = { path = "crates/relayer-utils" }
webb-chains-info = { path = "crates/chains-info" }
webb-event-watcher-traits = { path = "crates/event-watcher-traits" }
webb-ew-dkg = { path = "event-watchers/dkg" }
webb-ew-evm = { path = "event-watchers/evm" }
webb-ew-substrate = { path = "event-watchers/substrate" }
webb-relayer-handler-utils = { path = "crates/relayer-handler-utils" }
webb-relayer-types = { path = "crates/relayer-types" }
webb-relayer = { path = "services/webb-relayer" }
webb-proof-generation = { path = "crates/proof-generation" }
webb-circom-proving = { path = "crates/circom-proving" }

thiserror = "^1"
anyhow = "^1"
tracing = { version = "^0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["parking_lot", "env-filter"] }
url = { version = "^2.3", features = ["serde"] }
sled = "^0.34"
tokio = { version = "^1", features = ["full"] }
config = { version = "0.13", default-features = false, features = ["toml", "json"] }
serde_json = { version = "^1", default-features = false }
paw = { version = "^1.0" }
# webb = { version = "0.5.25", default-features = false }
webb = { version = "0.5.24", git = "https://github.com/webb-tools/webb-rs", default-features = false, rev = "13390b9"}
sp-core = { version = "16.0.0", default-features = false }
sp-runtime = { version = "18.0.0", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"] }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.14.1"
dotenv = "0.15.0"
axum = { version = "0.6.12", features = ["ws"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "^3.3"
async-trait = "^0.1"
futures = { version = "^0.3", default-features = false }
parking_lot = "^0.12"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
typed-builder = "0.14.0"
backoff = { version = "0.4.0", features = ["tokio"] }
hex = { version = "0.4", default-features = false }
libsecp256k1 = "0.7.1"
serde = { version = "^1", default-features = false, features = ["derive"] }
glob = "^0.3"
serde_path_to_error = "0.1.9"
serde_bytes = "0.11"

# eth2 light client crates
eth-rpc-client = { package = "eth_rpc_client", git = "https://github.com/webb-tools/pallet-eth2-light-client" }
eth2-pallet-init = { git = "https://github.com/webb-tools/pallet-eth2-light-client" }
eth2_to_substrate_relay = { git = "https://github.com/webb-tools/pallet-eth2-light-client" }
eth-types = { git = "https://github.com/webb-tools/pallet-eth2-light-client" }

[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev]
strip = "symbols"
debug = 0
