
[package]
name = "relayer-integration-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }


[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
webb = { workspace = true }
tempfile = { workspace = true }
ark-ff = { version = "^0.3.0", default-features = false }
reqwest = { workspace = true }
futures = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
# Webb relayer dependencies
webb-relayer = { workspace = true }
webb-evm-test-utils = { workspace = true }
webb-relayer-handler-utils = { workspace = true }
webb-relayer-tx-relay-utils = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-config = { workspace = true }
webb-relayer-context = { workspace = true }

# Webb gadget dependencies
webb-gadget-test-utils = { package = "test-utils", path = "/Users/salman01zz/Webb-Tools/gadget/test-utils" }
dfns-cggmp21-protocol =  { path = "/Users/salman01zz/Webb-Tools/gadget/protocols/dfns-cggmp21" }
tangle-primitives = { git = "https://github.com/webb-tools/tangle/" }



