[package]
name = "webb-runtime"
version = "0.1.0"
authors = [
   "Webb Developers <devs@webb.tools>",
   "Shady Khalifa <shekohex@gmail.com>"
]
edition = "2018"

[dependencies]
subxt = { version = "0.15", package = "substrate-subxt" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive", "full"] }
ethereum-types = { version = "0.11", default-features = false, features = ["codec"] }

# Pallets
frame-support = "3.0.0"

