[package]
name = "beacon-chain-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
types =  { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
tree_hash = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
merkle_proof = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
eth2_hashing = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop" }
eth-types = { git = "https://github.com/webb-tools/pallet-eth2-light-client", features = ["eip1559"] }
log = { version = "0.4", features = ["std", "serde"] }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
ethereum-types = "0.13.1"
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.5.9"
openssl = { version = "0.10", features = ["vendored"], optional = true }

