[package]
name = "webb-bridge-registry-backends"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
webb-relayer-utils = { workspace = true }
webb-relayer-config = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }

typed-builder = { workspace = true }
hex-literal = "0.4"

[dev-dependencies]
subxt-signer = { workspace = true, features = ["subxt"] }

[features]
default = ["std"]
std = []
