[package]
name = "webb-chains-info"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
quote = "1.0"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
proc-macro2 = "1.0"
toml = "0.7"
