[package]
name = "webb-event-watcher-traits"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-config = { path = "../relayer-config" }
webb-relayer-context = { path = "../relayer-context" }
webb-relayer-utils = { path = "../relayer-utils" }

async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
backoff = { workspace = true }
tokio = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }
webb-proposals = { workspace = true }
tracing-test = "0.2"
sled = { version = "^0.34" }
sp-core = { workspace = true }

[features]
default = ["std", "evm", "substrate"]
std = []
evm = [
    "webb-relayer-context/evm",
]
substrate = [
    "webb-relayer-context/substrate",
]
