[package]
name = "webb-price-oracle-backends"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
webb-relayer-utils = { workspace = true }
webb-relayer-store = { workspace = true }
webb-chains-info = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
webb = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }

chrono = { version = "0.4.23", features = ["serde"] }
typed-builder = { workspace = true }
# Backends for the price oracle.
reqwest = { workspace = true, features = ["json"], optional = true }


[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }

[features]
default = ["std"]
coingecko = ["dep:reqwest"]
std = []
