[package]
name = "webb-proposal-signing-backends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-types = { path = "../relayer-types" }
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-utils = { path = "../relayer-utils" }
async-trait = "^0.1"
tracing = { version = "^0.1", features = ["log"] }
sled = { version = "^0.34" }
futures = { version = "^0.3", default-features = false }
tokio = { version = "^1", features = ["full"] }
hex = { version = "0.4", default-features = false }
webb = { version = "0.5.11", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.13.1"
typed-builder = "0.10.0"

[features]
default = ["std"]
std = []