[package]
name = "webb-proposal-signing-backends"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-types = { path = "../relayer-types" }
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-utils = { path = "../relayer-utils" }

async-trait = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
webb = { workspace = true }
sp-core = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }

typed-builder = "0.14.0"
impl-trait-for-tuples = "0.2"

[dev-dependencies]
tracing-subscriber = { workspace = true }


[features]
default = ["std"]
std = []
