[package]
name = "webb-proposal-signing-backends"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-types = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-utils = { workspace = true }
webb-relayer-config = { workspace = true }

async-trait = { workspace = true }
tracing = { workspace = true }
sled = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
bounded-collections = { workspace = true }
webb = { workspace = true }
subxt-signer = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }

parking_lot = { workspace = true }
typed-builder = { workspace = true }
impl-trait-for-tuples = "0.2"

[dev-dependencies]
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[features]
default = ["std"]
std = []
