[package]
name = "webb-relayer-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-types = { path = "../relayer-types" }
webb-relayer-utils = { path = "../relayer-utils" }
anyhow = { version = "^1", optional = true }
tracing = { version = "^0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.1", features = ["parking_lot", "env-filter"], optional = true }
url = { version = "^2.2", features = ["serde"] }
serde = { version = "^1", default-features = false, features = ["derive"] }
config = { version = "0.11", default-features = false, features = ["toml", "json"] }
serde_json = { version = "^1", default-features = false }
structopt = { version = "^0.3", features = ["paw"], optional = true }
directories-next = { version = "^2.0", optional = true }
webb = { version = "0.5.14", default-features = false }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { version = "^0.2", features = ["vendored"], optional = true }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale"] }
ethereum-types = "0.13.1"
glob = "^0.3"
serde_path_to_error = "0.1.5"

[features]
default = ["evm-runtime", "substrate-runtime", "cli"]
cli = [
    "evm-runtime",
    "substrate-runtime",
    "anyhow",
    "tracing-subscriber",
    "structopt",
    "directories-next"
]
evm-runtime = ["webb/evm-runtime", "webb-proposals/evm"]
substrate-runtime = ["webb/substrate-runtime", "webb-proposals/substrate"]
integration-tests = ["tracing-subscriber/json"]