[package]
name = "webb-relayer-config"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
webb-relayer-store = { path = "../relayer-store" }
webb-relayer-types = { path = "../relayer-types" }
webb-relayer-utils = { path = "../relayer-utils" }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
serde_json = { workspace = true }
webb = { workspace = true }
subxt-signer = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true, optional = true }
webb-proposals = { workspace = true }
ethereum-types = { workspace = true }
glob = { workspace = true }
serde_path_to_error = { workspace = true }

structopt = { version = "^0.3", features = ["paw"], optional = true }
directories-next = { version = "^2.0", optional = true }
tracing-subscriber = { workspace = true, features = ["parking_lot", "env-filter"], optional = true }

[dev-dependencies]
dotenv = { workspace = true }

[features]
default = ["evm-runtime", "cli"]
cli = ["evm-runtime", "anyhow", "tracing-subscriber", "structopt", "directories-next"]
evm-runtime = ["webb/evm-runtime", "webb-proposals/evm"]
integration-tests = ["tracing-subscriber/json"]
