[package]
name = "webb-relayer-context"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-config = { path = "../relayer-config"}
webb-relayer-utils = { path = "../relayer-utils"}
webb-relayer-store = { path = "../relayer-store" }

tokio = { workspace = true }
webb = { workspace = true }
sp-core = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }

coingecko = "1.0.1"
ethers = {version = "1.0.2", features = ["rustls"] }

[features]
default = ["std", "evm", "substrate"]
std = []
evm = []
substrate = []
