[package]
name = "webb-relayer-context"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-config = { workspace = true }
webb-relayer-utils = { workspace = true }
webb-relayer-store = { workspace = true }
webb-price-oracle-backends = { workspace = true, features = ["coingecko"] }

tokio = { workspace = true }
webb = { workspace = true }
sp-core = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }


[features]
default = ["std", "evm", "substrate"]
std = []
evm = []
substrate = []
