[package]
name = "webb-relayer-context"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webb-relayer-config = { workspace = true }
webb-relayer-utils = { workspace = true }
webb-relayer-store = { workspace = true }
webb-relayer-tx-queue = { workspace = true }
webb-relayer-types = { workspace = true }
webb-price-oracle-backends = { workspace = true, features = ["coingecko"] }

async-trait = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
webb = { workspace = true }
subxt-signer = { workspace = true }
# Used by ethers (but we need it to be vendored with the lib).
native-tls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = "0.2.9"
regex = { version = "1" }

[features]
default = ["std", "evm", "substrate"]
std = []
evm = []
substrate = []
